# WSN-semester-project

./: .gitignore  Makefile  README.md  aes-128-cbc-test.c  aes-128-cbc.c  aes-128-cbc.h  aes-128-ctr.c  aes-128-ctr.h  aes-128-ecb-test-encrypt-and-decrypt-png.c  aes-128-ecb-test.c  aes-128-ecb.c  aes-128-ecb.h  aes-test.c  aes.c  aes.h  ciphertext.txt  enc.c  energest-utils.h  pkcs_7_padding.c  pkcs_7_padding.h  pkcs_7_padding.test.c  project-conf.h  tests  tests-cbc-png  tests-ecb  tests-ecb-png  tests-pkcs7  todo.txt
data/: hardware-aes-energest.csv  hardware-aes-with-hamming8-4-energest.csv  memory-footprint.csv  memory-footprint.tsv  no-aes-no-hamming8-4-energest.csv  software-aes-energest.csv  software-aes-with-hamming8-4-energest.csv
hardware-aes/: sender.c
hardware-aes-with-hamming8-4/: sender.c
homemade-aes-on-mote/: Makefile  aes.h  homemade_aes.c  project-conf.h
no-aes-no-hamming8-4/: Makefile  project-conf.h  sender.c
nullnet-receiver/: Makefile  receiver.c
nullnet-sender/: Makefile  sender.c
nullnet-sender-luminance-sensor/: Makefile  project-conf.h  sender.c
scripts/: decrypt_aes_ecb.py  discrete-markov-model.ipynb  parse-simple-energest-module-output.py  process-energy-usage-data.py  process-memory-footprint-data.py  process-timing-measurement-data.py  pyproject.toml  simulate_energy_consumption_with_and_without_aes_on_telosB_mote.ipynb  simulate_energy_consumption_with_and_without_aes_on_telosB_mote.py  tqdm-tricks.py
software-aes/: sender.c
software-aes-with-hamming8-4/: sender.c
