[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Kristoffer Plagborg Bak Sørensen <kristoffer.pbs@tuta.io>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
seaborn = "^0.12.1"
polars = "^0.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
